--- a/app/src/main/res/layout/fragment_beverage.xml
+++ b/app/src/main/res/layout/fragment_beverage.xml
@@ -77,7 +77,8 @@
             android:layout_alignParentRight="true"
             android:id="@+id/fragment_beverage_edit_price"
             android:layout_marginRight="15dp"
-            android:layout_marginEnd="15dp"/>
+            android:layout_marginEnd="15dp"
+            android:inputType="numberDecimal"/>
 
     </RelativeLayout>
 
